реализованы замечания 1 итерации

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,7 +54,7 @@
                         </fieldset>
                     </div>
                     <button class="form__handlers" type="submit">Сохранить</button>
-                    <div class="form__conservation">Сохранение...</div>
+                    
                 </form>
             </div>
         </div>
@@ -81,7 +81,7 @@
                         </fieldset>
                     </div>
                     <button class="form__handlers" type="submit">Создать</button>
-                    <div class="form__conservation">Сохранение...</div>
+
                 </form>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     <button class="form__close" type="button"></button>
                     <div class="form__main-conteiner">
                         <h2 class="form__title">Обновить аватар</h2>
-                        <fieldset class="form__input-container">                            
+                        <fieldset class="form__input-container">
                             <div class="form__input-group">
                                 <input type="url" id="url-input" class="form__item form__item_el_link-pic"
                                     name="profession" placeholder="Ссылка на картинку" required>
@@ -101,7 +101,6 @@
                         </fieldset>
                     </div>
                     <button class="form__handlers " type="submit">Сохранить</button>
-                    <div class="form__conservation">Сохранение...</div>
                 </form>
             </div>
         </div>
@@ -111,9 +110,9 @@
                 <form class="form">
                     <button class="form__close" type="button"></button>
                     <div class="form__main-conteiner">
-                        <h2 class="form__title">Вы уверены?</h2>                        
+                        <h2 class="form__title">Вы уверены?</h2>
                     </div>
-                    <button class="form__handlers " type="submit">Да</button>                    
+                    <button class="form__handlers " type="submit">Да</button>
                 </form>
             </div>
         </div>
@@ -134,11 +133,11 @@
             <div class="element__content">
                 <h2 class="element__title"></h2>
                 <div class="element__like-group">
-                    <button type="button" class="element__like" ></button>
+                    <button type="button" class="element__like"></button>
                     <p class="element__counter">0</p>
                 </div>
             </div>
-            <!-- <button class="element__trash" type="button"></button> -->
+            <button class="element__trash" type="button"></button>
         </article>
     </template>
 </body>
