поправлена отправка формы удаления карточки

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -95,7 +95,7 @@
                         <fieldset class="form__input-container">
                             <div class="form__input-group">
                                 <input type="url" id="url-input" class="form__item form__item_el_link-pic"
-                                    name="profession" placeholder="Ссылка на картинку" required>
+                                    name="url" placeholder="Ссылка на картинку" required>
                                 <span class="url-input-error form__input-error"></span>
                             </div>
                         </fieldset>
