mestoJS сделал плавную аним закрытия попапов, создал затемнение фона для картинок AZ

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,7 +54,7 @@
                         </fieldset>
                     </div>
                     <button class="form__handlers" type="submit">Сохранить</button>
-                    
+
                 </form>
             </div>
         </div>
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="popup" id="popup-pic">
+        <div class="popup popup__opened-pic" id="popup-pic">
             <div class="popup__body">
                 <figure class="popup__pic">
                     <button class="popup__close" type="button"></button>
